--- a/TS2/TS2 - Nicolás Locatti.ipynb
+++ b/TS2/TS2 - Nicolás Locatti.ipynb
@@ -42,18 +42,25 @@
     "\n",
     "![image-4.png](attachment:image-4.png)\n",
     "\n",
-    "**1.** Hallar la transferencia $T= \\frac{V_{o}}{V_{i}}$ en función de $ω_{o}$ y $Q$.\\\n",
-    "**2.** Obtener el valor de los componentes del circuito de forma tal que $ω_{o}=1$ y $Q=3$\\\n",
+    "**1.** Hallar la transferencia $T= \\frac{V_{o}}{V_{i}}$ en función de $ω_{o}$ y $Q$.\n",
+    "\n",
+    "**2.** Obtener el valor de los componentes del circuito de forma tal que $ω_{o}=1$ y $Q=3$\n",
+    "\n",
     "**3.** Ajustar el valor de $R_{1}$ de forma tal que $|T(0)|=20dB$.\n",
     "\n",
-    "**Bonus:**\n",
+    "#### **Bonus:**\n",
     "\n",
-    "+10 💎 Obtener los valores de la red normalizados en frecuencia e impedancia.\\\n",
-    "+10 🎓 Calcular las sensibilidades  $S_{C}^{ω_{o}}$, $S_{R_{2}}^{Q}$ y $S_{R_{3}}^{Q}$\\\n",
-    "+10 🤯 Recalcular los valores de la red para que cumpla con una transferencia Butterworth.\\\n",
-    "+10  🎸 Cómo podría obtener un circuito pasabanda con los mismos componentes originales y con qué parámetros quedaría diseñado (Ver ejemplo 4.6 en Schaumann).\\\n",
-    "+10  ⚽️ Simulación circuital de todos los experimentos.\\\n",
-    "+10  🍺 Presentación en jupyter notebook \\\n",
+    "+10 💎 Obtener los valores de la red normalizados en frecuencia e impedancia.\n",
+    "\n",
+    "+10 🎓 Calcular las sensibilidades  $S_{C}^{ω_{o}}$, $S_{R_{2}}^{Q}$ y $S_{R_{3}}^{Q}$\n",
+    "\n",
+    "+10 🤯 Recalcular los valores de la red para que cumpla con una transferencia Butterworth.\n",
+    "\n",
+    "+10  🎸 Cómo podría obtener un circuito pasabanda con los mismos componentes originales y con qué parámetros quedaría diseñado (Ver ejemplo 4.6 en Schaumann).\n",
+    "\n",
+    "+10  ⚽️ Simulación circuital de todos los experimentos.\n",
+    "\n",
+    "+10  🍺 Presentación en jupyter notebook \n",
     "\n",
     "***\n",
     "\n",
@@ -116,11 +123,16 @@
     "\n",
     "**Bonus:**\n",
     "\n",
-    "+10 💎 Obtener los valores de la red normalizados en frecuencia e impedancia.❌\\\n",
-    "+10 🎓 Calcular las sensibilidades  $S_{C}^{ω_{o}}$, $S_{R_{2}}^{Q}$ y $S_{R_{3}}^{Q}$❌\\\n",
-    "+10 🤯 Recalcular los valores de la red para que cumpla con una transferencia Butterworth.❌\\\n",
-    "+10  🎸 Cómo podría obtener un circuito pasabanda con los mismos componentes originales y con qué parámetros quedaría diseñado (Ver ejemplo 4.6 en Schaumann).❌\\\n",
-    "+10  ⚽️ Simulación circuital de todos los experimentos.❌\\\n",
+    "+10 💎 Obtener los valores de la red normalizados en frecuencia e impedancia.❌\n",
+    "\n",
+    "+10 🎓 Calcular las sensibilidades  $S_{C}^{ω_{o}}$, $S_{R_{2}}^{Q}$ y $S_{R_{3}}^{Q}$❌\n",
+    "\n",
+    "+10 🤯 Recalcular los valores de la red para que cumpla con una transferencia Butterworth.❌\n",
+    "\n",
+    "+10  🎸 Cómo podría obtener un circuito pasabanda con los mismos componentes originales y con qué parámetros quedaría diseñado (Ver ejemplo 4.6 en Schaumann).❌\n",
+    "\n",
+    "+10  ⚽️ Simulación circuital de todos los experimentos.❌\n",
+    "\n",
     "+10  🍺 Presentación en jupyter notebook ✔️"
    ]
   },
